kube/network/service_graphite.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphite
  namespace: monitoring
  labels:
    app: graphite
    component: core
spec:
  type: NodePort
  ports:
    - port: 80
      name: gweb
    - port: 2003
      name: gnode
  selector:
    app: graphite
    component: core
