kube/network/grafana_service_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  type: NodePort
  ports:
    - port: 3000
  selector:
    app: grafana
    component: core
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: grafana
   namespace: monitoring
spec:
   rules:
   - http:
       paths:
       - path: /*
         backend:
          serviceName: grafana
          servicePort: 3000
